tests/ui/deprecated_pyfn.stderr
error: use of deprecated constant `module_with_pyfn::PYFN_ATTRIBUTE`: `pyfn` will be removed in a future PyO3 version, use declarative `#[pymodule]` with `mod` instead
 --> tests/ui/deprecated_pyfn.rs:7:7
  |
7 |     #[pyfn(m)]
  |       ^^^^
  |
note: the lint level is defined here
 --> tests/ui/deprecated_pyfn.rs:1:9
  |
1 | #![deny(deprecated)]
  |         ^^^^^^^^^^
